--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,11 @@
     <string name="helloworld">
         Hello World!
     </string>
+    <string name="Offers">Offers</string>
+    <string name="Home">Home</string>
+    <string name="Menu">Menu</string>
+    <string name="Account">Account</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
