--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,13 @@
 <resources>
-    <string name="app_name">CoffeeHouse</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
+    <string name="app_name" translatable="false">CoffeeHouse</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
-    <string name="helloworld">
-        Hello World!
-    </string>
     <string name="Offers">Offers</string>
     <string name="Home">Home</string>
     <string name="Menu">Menu</string>
     <string name="Account">Account</string>
+    <string name="Map">Map</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
 </resources>
