--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -5,6 +5,7 @@
     <string name="Offers">Акции</string>
     <string name="Home">Начало</string>
     <string name="Menu">Меню</string>
+    <string name="Cart">Корзина</string>
     <string name="Account">Аккаунт</string>
     <string name="Map">Карта</string>
 
@@ -15,4 +16,11 @@
     <string name="Phone_number">Номер телефона</string>
     <string name="MyData">Мои данные</string>
     <string name="Settings">Настройки приложения</string>
+
+    <string name="alert_title">Нет интернета</string>
+    <string name="alert_message">Невозможно подключиться к интернету или загрузить информацию из локального хранилища. Попробуйте ещё раз позже :(</string>
+    <string name="Okay">Ок</string>
+
+    <string name="addToCartDesc">Добавить товар в корзину</string>
+    <string name="removeFromCartDesc">Удалить товар из корзины</string>
 </resources>
